Main section code added , would be updated later.

--- a/html/index.html
+++ b/html/index.html
@@ -18,17 +18,22 @@
       <section id="MainView">
         <div class="row">
             <div class="col-lg-3 m-md-auto m-sm-auto">
-                <h1>SANKALP PANDEY</h1>
-                <p>Programmer and Developer</p>
-                <p>If you want to talk about developing cool apps and web sites the reach me.</p>
+                <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_E3exCx.json" background="transparent" speed="1.5" style="width: 100%; height: 100%;" loop autoplay></lottie-player>
+                <h3 class="MainText MainHeading">I am Sankalp</h3>
+                <p class="MainText subText">Programmer and Developer</p>
+                <p class="MainText">If you want to talk about developing cool apps and web sites the reach me.</p>
                 <div class="buttons">
                     <button class="btn btn-primary">Let's chat</button>
                 </div>
             </div>
             <div class="col-lg-6 m-md-auto m-sm-auto">
-    <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_crm7f2hm.json"  background="transparent"  speed="1"  style="width: 550px; height: 550px;" loop autoplay></lottie-player>
+    <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_crm7f2hm.json"  background="transparent"  speed="1"  style="width: 600px; height: 600px;" loop autoplay></lottie-player>
             </div>
         </div>
+      </section>
+
+      <section id="aboutSection">
+
       </section>
      
     <script src="../js/index.js" charset="utf-8"></script>
