Lottie animation added , sections added.

--- a/html/index.html
+++ b/html/index.html
@@ -18,13 +18,16 @@
 
       <section id="MainView">
         <div class="row">
-            <div class="col-lg-6 m-md-auto m-sm-auto">
+            <div class="col-lg-6 m-md-auto m-sm-auto z-40">
                 <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_E3exCx.json" class="lottieView" background="transparent" speed="1.5" style="width: 100%; height: 100%;" loop autoplay></lottie-player>
                 <h3 class="MainText MainHeading">I am Sankalp</h3>
                 <p class="MainText subText">Programmer and Developer</p>
                 <p class="MainText">If you want to talk about developing cool apps and web sites the reach me.</p>
                 <div class="buttons">
-                    <button class="btn btn-primary">Let's chat</button>
+                    <button class="bg-white hover:bg-gray-100 text-white-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">
+                        TALK
+                      </button>
+    
                 </div>
             </div>
             <div class="col-lg-6 m-md-auto m-sm-auto">
@@ -37,26 +40,32 @@
 
       <section id="MidView">
           <div class=" MidViewDesign shadow-md rounded-lg h-18 z-0">
-              <h1>hjhjhjh</h1>
-              <h1>hjhjhjh</h1>
-              <h1>hjhjhjh</h1>
-              <h1>hjhjhjh</h1>
-              <h1>hjhjhjh</h1> 
-              <h1>hjhjhjh</h1>
-              <h1>hjhjhjh</h1>
-              <h1>hjhjhjh</h1>
-              <h1>hjhjhjh</h1>
-              <h1>hjhjhjh</h1>
+              <div class="row">
+                  <div class="col-6">
+                    <h1 class="midText">hjhjhjh</h1>
+                    <h1 class="midText">hhhk</h1>
+               </div>
+                  <div class="col-6">
+                    <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_w51pcehl.json" class="programImage" background="transparent" speed="1.5" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+                  </div>
+              </div>
          </div>
 </section>
 
 <section id="MidOneView">
     <div class="MidOneView shadow-md rounded-lg h-18 z-20">
-        <h1>hjhjhjh</h1>
-        <h1>hjhjhjh</h1>
-        <h1>hjhjhjh</h1>
-        <h1>hjhjhjh</h1>
-        <h1>hjhjhjh</h1>
+       <div class="row">
+           <div class="col-6 sm:text-sm-center">
+            <lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_lbn31mn4.json" class="codeView sm\:text-center"  background="transparent" speed="1.5" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+           </div>
+           <div class="col-6">
+            <h1>hjhjhjh</h1>
+            <h1>hjhjhjh</h1>
+            <h1>hjhjhjh</h1>
+            <h1>hjhjhjh</h1>
+            <h1>hjhjhjh</h1>
+           </div>
+       </div>
     </div>
 </section>
 
@@ -67,8 +76,7 @@
         <h1>hjhjhjh</h1>
         <h1>hjhjhjh</h1>
         <h1>hjhjhjh</h1>
-
-    </div>
+     </div>
 </section>
      
     <script src="../js/index.js" charset="utf-8"></script>
