Main page last section added.

--- a/html/index.html
+++ b/html/index.html
@@ -108,7 +108,33 @@
     </div>
 </section>
 
-<section id="LastSection">
+<section id="MidView">
+    <div class="LastSection shadow-md rounded-lg h-18 z-30">
+        <div class="row">
+            <div class="col-lg-6">
+            </div>
+            <div class="col-lg-6">
+             <h1 class="HeadingText">RESUME</h1>
+                <br>
+                <ul>
+                    <li>
+                        <p style="opacity: 0.5;">YOU CAN CHECK OUT MY RESUME FROM BELOW-:</p>
+                     </li>
+                <li>
+                    <p style="opacity: 0.5;">NNNNN</p>
+                </li>
+
+                </ul>
+                <br>
+                <br>
+                <br>
+                <button class="resumeButton bg-white hover:bg-gray-100 text-white-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">
+                    <a href="">Resume</a>
+                </button>
+                
+            </div>
+        </div>
+    </div>
   
 </section>
 
