Last section added for main page , code implementation done.

--- a/html/index.html
+++ b/html/index.html
@@ -136,10 +136,26 @@
         </div>
     </div>
   
+</section>   
+
+<section id="ConnectSection">
+    <h1 class="HeadingText">STAY CONNECTED</h1>
+    <br>
+    <p style="opacity: 0.5;">     Second year student at Vellore Institute of technology , Vellore , TamilNadu</p>
+    <h1></h1>
+    <h1>
+    </h1>
+    <div class="SocialIcon">
+        <a href=""><i class="fab fa-github fa-2x"></i></a>
+        <a href=""><i class="fab fa-instagram fa-2x"></i></a>
+        <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
+    </div>
+    
 </section>
 
 
      
     <script src="../js/index.js" charset="utf-8"></script>
+    <script src="https://kit.fontawesome.com/f4d4f77253.js" crossorigin="anonymous"></script>
 </body>
 </html>
