Adding data to the divisions.

--- a/html/project.html
+++ b/html/project.html
@@ -235,8 +235,8 @@
     </h1>
     <div class="SocialIcon">
         <a href="https://github.com/SANKALP1011"><i class="fab fa-github fa-2x"></i></a>
-        <a href=""><i class="fab fa-instagram fa-2x"></i></a>
-        <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
+        <a href="https://www.instagram.com/sankalp_.10/"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/sankalp-pandey-688a28223/"><i class="fab fa-linkedin fa-2x"></i></a>
     </div>
     
 </section>
