--- a/html/index.html
+++ b/html/index.html
@@ -43,8 +43,11 @@
               <div class="row">
                   <div class="col-6">
                     <h1 class="HeadingText">KNOW ME</h1>
-                    <h1 class="midText">hhhk</h1>
-               </div>
+                            <p class="pText">- Second year pursuing Computer Science from Vit , Vellore.</p>
+                            <p class="pText">- I completed my schooling from Delhi Public School.</p>
+                            <p class="pText">- I have keen interest in cloud computing.</p>
+                            <p class="pText">- I hate redundant code.</p>
+                        </div>
                   <div class="col-6">
                     <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_w51pcehl.json" class="programImage" background="transparent" speed="1.5" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
                   </div>
@@ -59,10 +62,21 @@
             <lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_lbn31mn4.json" class="codeView sm\:text-center"  background="transparent" speed="1.5" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
            </div>
            <div class="col-6">
-            <h1 class="HeadingText">hjhjhjh</h1>
-            <h1 class="midText">hjhjhjh</h1>
-            <h1 class="midText">hjhjhjh</h1>
-            <h1 class="midText">hjhjhjh</h1>
+            <h1 class="HeadingText">LANGUAGES</h1>
+            <div class="row">
+                <div class="col-lg-6">
+                    <p class="pText">- C++</p>
+                    <p class="pText">- HTML</p>
+                    <p class="pText">- CSS</p>
+                    <p class="pText">- JAVASCRIPT</p>
+                </div>
+                <div class="col-lg-6">
+                    <p class="pText">- SHELL</p>
+                    <p class="pText">- SQL</p>
+                    <p class="pText">- SWIFT</p>
+                    <p class="pText">- C++</p>
+                </div>
+            </div>
 
            </div>
        </div>
@@ -146,15 +160,12 @@
     <h1>
     </h1>
     <div class="SocialIcon">
-        <a href=""><i class="fab fa-github fa-2x"></i></a>
-        <a href=""><i class="fab fa-instagram fa-2x"></i></a>
-        <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
+        <a href="https://github.com/SANKALP1011"><i class="fab fa-github fa-2x"></i></a>
+        <a href="https://www.instagram.com/sankalp_.10/"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/sankalp-pandey-688a28223/"><i class="fab fa-linkedin fa-2x"></i></a>
     </div>
     
 </section>
-
-
-     
     <script src="../js/index.js" charset="utf-8"></script>
     <script src="https://kit.fontawesome.com/f4d4f77253.js" crossorigin="anonymous"></script>
 </body>
