More data added.

--- a/html/index.html
+++ b/html/index.html
@@ -74,11 +74,9 @@
                     <p class="pText">- SHELL</p>
                     <p class="pText">- SQL</p>
                     <p class="pText">- SWIFT</p>
-                    <p class="pText">- C++</p>
                 </div>
             </div>
-
-           </div>
+        </div>
        </div>
     </div>
 </section>
@@ -87,10 +85,23 @@
     <div class="MidTwoView shadow-md rounded-lg h-18 z-30">
       <div class="row">
           <div class="col-lg-6">
-            <h1 class="HeadingText">hjhjhjh</h1>
-            <h1 class="midText">hjhjhjh</h1>
-            <h1 class="midText">hjhjhjh</h1>
-            <h1 class="midText">hjhjhjh</h1>
+              <h1 class="HeadingText">FRAMEWORKS</h1>
+            <div class="row">
+                <div class="col-lg-6">
+                    <p class="pText">- JQUERY</p>
+                    <p class="pText">- NODE.JS</p>
+                    <p class="pText">- EXPRESS.JS</p>
+                    <p class="pText">- NODEMON</p>
+                    <p class="pText">- TERMINAL</p>
+                </div>
+                <div class="col-lg-6">
+                    <p class="pText">- FIREBASE</p>
+                    <p class="pText">- REALM</p>
+                    <p class="pText">- XCODE</p>
+                    <p class="pText">- BOOTSTRAP</p>
+                    <p class="pText">- TAILWIND</p>
+                </div>
+            </div>
           </div>
           <div class="col-lg-6">
             <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_s0csja4b.json" class="codeView sm\:text-center"  background="transparent" speed="1.5" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
