More data added , code implementation removed.

--- a/html/project.html
+++ b/html/project.html
@@ -11,10 +11,10 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 <body>
+    <h1 class="ProjectTitle">MY PROJECTS</h1>
     <section id="WelcomeSection">
         <div class="WelcomeSection">
             <lottie-player src="https://assets5.lottiefiles.com/private_files/lf30_Twfrj1.json"  background="transparent" speed="1.5" style="width: 200px; height: 200px;" loop autoplay></lottie-player>
-            <h1 class="J">APP RPOJECTS</h1>
         </div>
 
         
@@ -87,9 +87,9 @@
     <section id="app">
        <div class="row">
            <div class="col-lg-6">
-               <div class="appText shadow-md rounded-lg h-18">
-                   <h1>hjhj</h1>
-                   <h1>hjhj</h1>
+               <div class="appText shadow-lg rounded-lg h-18">
+                   <h1>BEVERAGES</h1>
+                   <p class="appSubtext">-Buillt using swift</p>
                    <h1>hjhj</h1>
                    <h1>hjhj</h1>
                    <h1>hjhj</h1>
@@ -97,7 +97,7 @@
                </div>
            </div>
            <div class="col-lg-6">
-            <div class="appText shadow-md rounded-lg h-18">
+            <div class="appText shadow-lg rounded-lg h-18">
                 <h1>hjhj</h1>
                 <h1>hjhj</h1>
                 <h1>hjhj</h1>
@@ -111,7 +111,7 @@
        
        <div class="row">
            <div class="col-lg-6">
-               <div class="appText shadow-md rounded-lg h-18">
+               <div class="appText shadow-lg rounded-lg h-18">
                    <h1>jjjj</h1>
                    <h1>jjjj</h1>
                    <h1>jjjj</h1>
@@ -120,7 +120,7 @@
                </div>
            </div>
            <div class="col-lg-6">
-            <div class="appText shadow-md rounded-lg h-18">
+            <div class="appText shadow-lg rounded-lg h-18">
                 <h1>jjjj</h1>
                 <h1>jjjj</h1>
                 <h1>jjjj</h1>
@@ -131,7 +131,7 @@
        </div>
        <div class="row">
         <div class="col-lg-6">
-            <div class="appText shadow-md rounded-lg h-18">
+            <div class="appText shadow-lg rounded-lg h-18">
                 <h1>jjjj</h1>
                 <h1>jjjj</h1>
                 <h1>jjjj</h1>
@@ -140,7 +140,7 @@
             </div>
         </div>
         <div class="col-lg-6">
-         <div class="appText shadow-md rounded-lg h-18">
+         <div class="appText shadow-lg rounded-lg h-18">
              <h1>jjjj</h1>
              <h1>jjjj</h1>
              <h1>jjjj</h1>
@@ -206,7 +206,7 @@
             <h1 class="J">OTHER PROJECTS</h1>
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="appText shadow-md rounded-lg h-18">
+                    <div class="appText shadow-lg rounded-lg h-18">
                         <h1>jjjj</h1>
                         <h1>jjjj</h1>
                         <h1>jjjj</h1>
@@ -215,7 +215,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                 <div class="appText shadow-md rounded-lg h-18">
+                 <div class="appText shadow-lg rounded-lg h-18">
                      <h1>jjjj</h1>
                      <h1>jjjj</h1>
                      <h1>jjjj</h1>
