--- a/html/project.html
+++ b/html/project.html
@@ -87,23 +87,25 @@
     <section id="app">
        <div class="row">
            <div class="col-lg-6">
-               <div class="appText shadow-lg rounded-lg h-18">
-                   <h1>BEVERAGES</h1>
+               <div class="appText shadow-lg rounded-lg h-18 animate-pulse">
+                   <h1 class="AppHeading">BEVERAGES</h1>
                    <p class="appSubtext">-Buillt using swift</p>
-                   <h1>hjhj</h1>
-                   <h1>hjhj</h1>
-                   <h1>hjhj</h1>
-                   <h1>hjhj</h1>
+                   <p class="appSubtext">-Hot beverage ordering app.</p>
+                   <p class="appSubtext">-Includes firrebase for backend.</p>
+                   <p class="appSubtext">-For user auth , firrebase is used.</p>
+                   <p class="appSubtext">-Includes firrebase realtime database.</p>
+                   <p class="appSubtext">-Includes lottie animation.</p>
                </div>
            </div>
            <div class="col-lg-6">
             <div class="appText shadow-lg rounded-lg h-18">
-                <h1>hjhj</h1>
-                <h1>hjhj</h1>
-                <h1>hjhj</h1>
-                <h1>hjhj</h1>
-                <h1>hjhj</h1>
-                <h1>hjhj</h1>
+                <h1 class="AppHeading">CONNECT-Y</h1>
+                <p class="appSubtext">-A complete Messaging app.</p>
+                <p class="appSubtext">-Buillt using swift</p>
+                <p class="appSubtext">-Includes firebase for authentication.</p>
+                <p class="appSubtext">-Includes firebase realtime database for storind user data.</p>
+                <p class="appSubtext">-Includes message kit.</p>
+                <p class="appSubtext">-PROJECT STATUS: ONGOING</p>
             </div>
                
            </div>
@@ -112,40 +114,45 @@
        <div class="row">
            <div class="col-lg-6">
                <div class="appText shadow-lg rounded-lg h-18">
-                   <h1>jjjj</h1>
-                   <h1>jjjj</h1>
-                   <h1>jjjj</h1>
-                   <h1>jjjj</h1>
-                   <h1>jjjj</h1>
+                   <h1 class="AppHeading">RICKIPEDIA</h1>
+                   <p class="appSubtext">-Buillt using swift.</p>
+                   <p class="appSubtext">-Rick and morty fan app.</p>
+                   <p class="appSubtext">-Includes a small quiz and facts about the series.</p>
+                   <p class="appSubtext">-Includes Rick and Morty api for facts.</p>
+                   <p class="appSubtext">-Includes firebase for user authentication.</p>
+                   <p class="appSubtext">-This was my first app to Rick and Morty api.</p>
+
                </div>
            </div>
            <div class="col-lg-6">
             <div class="appText shadow-lg rounded-lg h-18">
-                <h1>jjjj</h1>
-                <h1>jjjj</h1>
-                <h1>jjjj</h1>
-                <h1>jjjj</h1>
-                <h1>jjjj</h1>
+                <h1 class="AppHeading">MOVIE-APP</h1>
+                <p class="appSubtext">-Built using swift.</p>
+                <p class="appSubtext">-Includes the moviedb api for fetching the data.</p>
+                <p class="appSubtext">-Includes the popular  movies of all the time.</p>
+                <p class="appSubtext">-Includes lottie animation.</p>
+                <p class="appSubtext">-Built inorder the test the api.</p>
+                <p class="appSubtext">-Data decoded using json decoding.</p>
             </div>
         </div>
        </div>
        <div class="row">
         <div class="col-lg-6">
             <div class="appText shadow-lg rounded-lg h-18">
-                <h1>jjjj</h1>
-                <h1>jjjj</h1>
-                <h1>jjjj</h1>
-                <h1>jjjj</h1>
-                <h1>jjjj</h1>
+                <h1 class="AppHeading">TIC TAC TOE</h1>
+                <p class="appSubtext">-Built using swift.</p>
+                <p class="appSubtext">-Tic toe game with the computer AI.</p>
+                <p class="appSubtext">-The AI of computer is quite weak.</p>
+                <p class="appSubtext">-Simple tic tac toe game.</p>
+                <p class="appSubtext">-Source code available on github.</p>
             </div>
         </div>
         <div class="col-lg-6">
          <div class="appText shadow-lg rounded-lg h-18">
-             <h1>jjjj</h1>
-             <h1>jjjj</h1>
-             <h1>jjjj</h1>
-             <h1>jjjj</h1>
-             <h1>jjjj</h1>
+            <h1 class="AppHeading">PIZZA CALCULATOR</h1>
+            <p class="appSubtext">-Buillt using swift..</p>
+            <p class="appSubtext">-Helps us to calculate pizza how many should we order for a party.</p>
+            <p class="appSubtext">-This app was just built for the timepass , inorder to incorporate the lottiefiles.</p>
          </div>
      </div>
     </div>
