--- a/html/index.html
+++ b/html/index.html
@@ -171,9 +171,9 @@
 </section>   
 
 <section id="ConnectSection">
-    <h1 class="HeadingText">STAY CONNECTED</h1>
+    <h1 class="EndText">STAY CONNECTED</h1>
     <br>
-    <p style="opacity: 0.5;">     Second year student at Vellore Institute of technology , Vellore , TamilNadu</p>
+    <p class="lastSubText" style="opacity: 0.5;">     Second year student at Vellore Institute of technology , Vellore , TamilNadu</p>
     <h1></h1>
     <h1>
     </h1>
