--- a/html/project.html
+++ b/html/project.html
@@ -167,40 +167,40 @@
     <div class="row">
         <div class="col-lg-6">
             <div class="appText shadow-md rounded-lg h-18">
-                <h1>jjjj</h1>
-                <h1>jjjj</h1>
-                <h1>jjjj</h1>
-                <h1>jjjj</h1>
-                <h1>jjjj</h1>
+                <h1 class="AppHeading">COFFEE BEANS</h1>
+                <p class="appSubtext">-Wed design for a coffee bean providing company.</p>
+                <p class="appSubtext">-Built using html and css.</p>
+                <p class="appSubtext">-Includes bootstrap as framework.</p>
+                <p class="appSubtext">-Source code available on github.</p>
             </div>
         </div>
         <div class="col-lg-6">
          <div class="appText shadow-md rounded-lg h-18">
-             <h1>jjjj</h1>
-             <h1>jjjj</h1>
-             <h1>jjjj</h1>
-             <h1>jjjj</h1>
-             <h1>jjjj</h1>
+             <h1 class="AppHeading">SNEAKER STORE</h1>
+             <p class="appSubtext">-Sneaker store website design.</p>
+             <p class="appSubtext">-Buillt using html and css.</p>
+             <p class="appSubtext">-Includes tailwind and bootstrap as framework.</p>
+             <p class="appSubtext">-Source code available on git.</p>
          </div>
      </div>
     </div>
     <div class="row">
      <div class="col-lg-6">
          <div class="appText shadow-md rounded-lg h-18">
-             <h1>jjjj</h1>
-             <h1>jjjj</h1>
-             <h1>jjjj</h1>
-             <h1>jjjj</h1>
-             <h1>jjjj</h1>
+             <h1 class="AppHeading">NETFLIX WEB UI</h1>
+             <p class="appSubtext">-Cloned the netflic web app.</p>
+             <p class="appSubtext">-Buillt using html and css.</p>
+             <p class="appSubtext">-Includes tailwind and bootstrap as framewoks.</p>
+             <p class="appSubtext">-Currently , it's an ongoing project.</p>
          </div>
      </div>
      <div class="col-lg-6">
       <div class="appText shadow-md rounded-lg h-18">
-          <h1>jjjj</h1>
-          <h1>jjjj</h1>
-          <h1>jjjj</h1>
-          <h1>jjjj</h1>
-          <h1>jjjj</h1>
+          <h1 class="AppHeading">PORTFOLIO</h1>
+          <p class="appSubtext">-My Portfolio web design.</p>
+          <p class="appSubtext">-Buillt using html , css and javascript.</p>
+          <p class="appSubtext">-Includes tailwind , bootstrap , node.js and express.js as framework.</p>
+          <p class="appSubtext">-Source code available on github.</p>
       </div>
   </div>
  </div>
@@ -234,9 +234,11 @@
  </section>
 
  <section id="ConnectSection">
-    <h1 class="HeadingText">STAY CONNECTED</h1>
+   <centre>
+    <h1 class="EndText">STAY CONNECTED</h1>
+   </centre>
     <br>
-    <p style="opacity: 0.5;">     Second year student at Vellore Institute of technology , Vellore , TamilNadu</p>
+    <p class="lastSubText" style="opacity: 0.5;">     Second year student at Vellore Institute of technology , Vellore , TamilNadu</p>
     <h1></h1>
     <h1>
     </h1>
