Bugs removed , division orientation improved.

--- a/html/index.html
+++ b/html/index.html
@@ -32,9 +32,7 @@
         </div>
       </section>
 
-      
-
-      <section id="MidView">
+ <section id="MidView">
           <div class=" MidViewDesign shadow-lg rounded-lg h-18 z-10">
               <div class="row">
                   <div class="col-lg-6">
@@ -45,7 +43,7 @@
                             <p class="pText">- I hate redundant code.</p>
                         </div>
                   <div class="col-6">
-                    <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_w51pcehl.json" class="programImage" background="transparent" speed="1.5" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+                    <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_w51pcehl.json" class="programImage sm\:text-center" background="transparent" speed="1.5" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
                   </div>
               </div>
          </div>
