--- a/html/project.html
+++ b/html/project.html
@@ -95,6 +95,7 @@
                    <p class="appSubtext">-For user auth , firrebase is used.</p>
                    <p class="appSubtext">-Includes firrebase realtime database.</p>
                    <p class="appSubtext">-Includes lottie animation.</p>
+                   <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
                </div>
            </div>
            <div class="col-lg-6">
@@ -105,10 +106,10 @@
                 <p class="appSubtext">-Includes firebase for authentication.</p>
                 <p class="appSubtext">-Includes firebase realtime database for storind user data.</p>
                 <p class="appSubtext">-Includes message kit.</p>
-                <p class="appSubtext">-PROJECT STATUS: ONGOING</p>
+                <p class="appSubtext">-Project status: ongoing</p>
+                <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
             </div>
-               
-           </div>
+            </div>
        </div>
        
        <div class="row">
@@ -121,6 +122,7 @@
                    <p class="appSubtext">-Includes Rick and Morty api for facts.</p>
                    <p class="appSubtext">-Includes firebase for user authentication.</p>
                    <p class="appSubtext">-This was my first app to Rick and Morty api.</p>
+                   <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
 
                </div>
            </div>
@@ -133,6 +135,7 @@
                 <p class="appSubtext">-Includes lottie animation.</p>
                 <p class="appSubtext">-Built inorder the test the api.</p>
                 <p class="appSubtext">-Data decoded using json decoding.</p>
+                <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
             </div>
         </div>
        </div>
@@ -145,6 +148,7 @@
                 <p class="appSubtext">-The AI of computer is quite weak.</p>
                 <p class="appSubtext">-Simple tic tac toe game.</p>
                 <p class="appSubtext">-Source code available on github.</p>
+                <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
             </div>
         </div>
         <div class="col-lg-6">
@@ -153,6 +157,7 @@
             <p class="appSubtext">-Buillt using swift..</p>
             <p class="appSubtext">-Helps us to calculate pizza how many should we order for a party.</p>
             <p class="appSubtext">-This app was just built for the timepass , inorder to incorporate the lottiefiles.</p>
+            <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
          </div>
      </div>
     </div>
@@ -171,7 +176,7 @@
                 <p class="appSubtext">-Wed design for a coffee bean providing company.</p>
                 <p class="appSubtext">-Built using html and css.</p>
                 <p class="appSubtext">-Includes bootstrap as framework.</p>
-                <p class="appSubtext">-Source code available on github.</p>
+                <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
             </div>
         </div>
         <div class="col-lg-6">
@@ -180,7 +185,7 @@
              <p class="appSubtext">-Sneaker store website design.</p>
              <p class="appSubtext">-Buillt using html and css.</p>
              <p class="appSubtext">-Includes tailwind and bootstrap as framework.</p>
-             <p class="appSubtext">-Source code available on git.</p>
+             <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
          </div>
      </div>
     </div>
@@ -188,10 +193,10 @@
      <div class="col-lg-6">
          <div class="appText shadow-md rounded-lg h-18">
              <h1 class="AppHeading">NETFLIX WEB UI</h1>
-             <p class="appSubtext">-Cloned the netflic web app.</p>
              <p class="appSubtext">-Buillt using html and css.</p>
              <p class="appSubtext">-Includes tailwind and bootstrap as framewoks.</p>
              <p class="appSubtext">-Currently , it's an ongoing project.</p>
+             <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
          </div>
      </div>
      <div class="col-lg-6">
@@ -200,7 +205,7 @@
           <p class="appSubtext">-My Portfolio web design.</p>
           <p class="appSubtext">-Buillt using html , css and javascript.</p>
           <p class="appSubtext">-Includes tailwind , bootstrap , node.js and express.js as framework.</p>
-          <p class="appSubtext">-Source code available on github.</p>
+          <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
       </div>
   </div>
  </div>
@@ -214,20 +219,23 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="appText shadow-lg rounded-lg h-18">
-                        <h1>jjjj</h1>
-                        <h1>jjjj</h1>
-                        <h1>jjjj</h1>
-                        <h1>jjjj</h1>
-                        <h1>jjjj</h1>
+                        <h1 class="AppHeading">DSA</h1>
+                        <p class="appSubtext">-My personal dsa practice library.</p>
+                        <p class="appSubtext">-Implenented in c++ langauge.</p>
+                        <p class="appSubtext">-Includes data structures and algorithim.</p>
+                        <p class="appSubtext">-This repository is upadted at weekend.</p>
+                        <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
+
                     </div>
                 </div>
                 <div class="col-lg-6">
                  <div class="appText shadow-lg rounded-lg h-18">
-                     <h1>jjjj</h1>
-                     <h1>jjjj</h1>
-                     <h1>jjjj</h1>
-                     <h1>jjjj</h1>
-                     <h1>jjjj</h1>
+                     <h1 class="AppHeading">GYMBAR</h1>
+                     <p class="appSubtext">-Implenented in c++ langauge.</p>
+                     <p class="appSubtext">-Complete demo of gym facalities.</p>
+                     <p class="appSubtext">-Includes Object orientated programming.</p>
+                     <p class="appSubtext">-Include various option for the user.</p>
+                     <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong> </p>
                  </div>
              </div>
             </div>
