--- a/html/index.html
+++ b/html/index.html
@@ -9,9 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    
 </head>
 <body>
-
       <section id="MainView">
         <div class="row">
             <div class="col-lg-6 m-md-auto m-sm-auto z-0">
@@ -42,32 +42,32 @@
                             <p class="pText">- I have keen interest in cloud computing.</p>
                             <p class="pText">- I hate redundant code.</p>
                         </div>
-                  <div class="col-6">
+                  <div class="col-lg-6">
                     <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_w51pcehl.json" class="programImage sm\:text-center" background="transparent" speed="1.5" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
                   </div>
               </div>
          </div>
 </section>
 
-<section id="MidOneView">
+<section id="MidOneView" style="text-align: center;">
     <div class="MidOneView shadow-md rounded-lg h-18 z-20">
        <div class="row">
            <div class="col-lg-6">
             <lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_lbn31mn4.json" class="codeView sm\:text-center"  background="transparent" speed="1.5" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
            </div>
-           <div class="col-6">
+           <div class="col-lg-6">
             <h1 class="HeadingText">LANGUAGES</h1>
             <div class="row">
                 <div class="col-lg-6">
-                    <p class="pText">- C++</p>
-                    <p class="pText">- HTML</p>
-                    <p class="pText">- CSS</p>
-                    <p class="pText">- JAVASCRIPT</p>
+                    <p class="pText">C++</p>
+                    <p class="pText">SQL</p>
+                    <p class="pText">SWIFT</p>
+                    <p class="pText">SHELL</p>
                 </div>
                 <div class="col-lg-6">
-                    <p class="pText">- SHELL</p>
-                    <p class="pText">- SQL</p>
-                    <p class="pText">- SWIFT</p>
+                    <p class="pText">-HTML</p>
+                    <p class="pText">-CSS</p>
+                    <p class="pText">-JAVASCRIPT</p>
                 </div>
             </div>
         </div>
@@ -79,22 +79,23 @@
     <div class="MidTwoView shadow-lg rounded-lg h-18 z-30">
       <div class="row">
           <div class="col-lg-6">
-              <h1 class="HeadingText">FRAMEWORKS</h1>
+              <h1 class="HeadingText" style="text-align: center;">FRAMEWORKS</h1>
             <div class="row">
                 <div class="col-lg-6">
-                    <p class="pText">- JQUERY</p>
-                    <p class="pText">- NODE.JS</p>
-                    <p class="pText">- EXPRESS.JS</p>
-                    <p class="pText">- NODEMON</p>
-                    <p class="pText">- TERMINAL</p>
-                    <p class="pText">- HEROKU</p>
+                    <p class="pText" style="text-align: center;">- JQUERY</p>
+                    <p class="pText" style="text-align: center;">- NODE.JS</p>
+                    <p class="pText" style="text-align: center;">- EXPRESS.JS</p>
+                    <p class="pText" style="text-align: center;">- NODEMON</p>
+                    <p class="pText" style="text-align: center;">- TERMINAL</p>
+                    <p class="pText" style="text-align: center;">- HEROKU</p>
                 </div>
                 <div class="col-lg-6">
-                    <p class="pText">- FIREBASE</p>
-                    <p class="pText">- REALM</p>
-                    <p class="pText">- XCODE</p>
-                    <p class="pText">- BOOTSTRAP</p>
-                    <p class="pText">- TAILWIND</p>
+                    <p class="pText" style="text-align: center;">- FIREBASE</p>
+                    <p class="pText" style="text-align: center;">- REALM</p>
+                    <p class="pText" style="text-align: center;">- XCODE</p>
+                    <p class="pText" style="text-align: center;">- BOOTSTRAP</p>
+                    <p class="pText" style="text-align: center;">- TAILWIND</p>
+                    <p class="pText" style="text-align: center;">- EJS</p>
                 </div>
             </div>
           </div>
@@ -106,7 +107,7 @@
 </section>
 
 <section id="MidOneView">
-    <div class="MidOneView shadow-md rounded-lg h-18 z-40">
+    <div class="MidOneView shadow-md rounded-lg h-18 z-40" style="text-align: center;">
         <div class="row">
             <div class="col-lg-6">
                 <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_6gfl0jjp.json" class="codeView sm\:text-center"  background="transparent" speed="1.5" style="width: 340px; height: 340px;" loop autoplay></lottie-player> 
@@ -114,20 +115,11 @@
             <div class="col-lg-6">
                 <h1 class="HeadingText">PROJECTS</h1>
                 <p class="pText"> ALL OF MY PROJECTS ARE BUILT USING-:</p>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <p class="pText">- SWIFT</p>
-                        <p class="pText">- HTML</p>
-                        <p class="pText">- CSS</p>
-                    </div>
-                    <div class="col-lg-6">
-                        <p class="pText">- JAVASCRIPT</p>
-                        <p class="pText">- C++</p>
-                    </div>
-                </div>
+                <p class="pText">-My projects are open source.</p>
+                <p class="pText">-Projects are uploaded on github.</p>
                 <p class="pText">CLICK BELOW FOR MY PROJECTS-:</p>
   <br>
-                <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow transform motion-safe:hover:scale-110... col-lg-4">
+                <button class=" ProjectButton bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow transform motion-safe:hover:scale-110... col-lg-4">
                     <a href="../html/project.html">Projects</a>
                   </button>
                   
