--- a/html/index.html
+++ b/html/index.html
@@ -119,7 +119,7 @@
                 <p class="pText">-Projects are uploaded on github.</p>
                 <p class="pText">CLICK BELOW FOR MY PROJECTS-:</p>
   <br>
-                <button class=" ProjectButton bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow transform motion-safe:hover:scale-110... col-lg-4">
+                <button class=" ProjectButton bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow transform motion-safe:hover:scale-110... col-lg-4" type="button">
                     <a href="../html/project.html">Projects</a>
                   </button>
                   
