Some more deisgn chnages.

--- a/html/project.html
+++ b/html/project.html
@@ -239,6 +239,30 @@
                  </div>
              </div>
             </div>
+
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="appText shadow-lg rounded-lg h-18">
+                        <h1 class="AppHeading">GYMBAR</h1>
+                        <p class="appSubtext">-Implenented in c++ langauge.</p>
+                        <p class="appSubtext">-Complete demo of gym facalities.</p>
+                        <p class="appSubtext">-Includes Object orientated programming.</p>
+                        <p class="appSubtext">-Include various option for the user.</p>
+                        <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong> </p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="appText shadow-lg rounded-lg h-18">
+                        <h1 class="AppHeading">GYMBAR</h1>
+                        <p class="appSubtext">-Implenented in c++ langauge.</p>
+                        <p class="appSubtext">-Complete demo of gym facalities.</p>
+                        <p class="appSubtext">-Includes Object orientated programming.</p>
+                        <p class="appSubtext">-Include various option for the user.</p>
+                        <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong> </p>
+                    </div>
+                </div>
+                
+            </div>
  </section>
 
  <section id="ConnectSection">
