--- a/html/index.html
+++ b/html/index.html
@@ -8,14 +8,17 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     
 </head>
 <body>
       <section id="MainView">
         <div class="row">
-            <div class="col-lg-6 m-md-auto m-sm-auto z-0">
-                <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_E3exCx.json" class="lottieView" background="transparent" speed="1.5" style="width: 100%; height: 100%;" loop autoplay></lottie-player>
+            <div class="col-lg-6 m-md-auto m-sm-auto">
+                <!-- <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_E3exCx.json" class="lottieView" background="transparent" speed="1.5" style="width: 50%; height: 50%;" loop autoplay></lottie-player> -->
+                <h1 class="MainText MainHeading" style="color: #864879;">Hello,</h1>
+                <br>
                 <h3 class="MainText MainHeading">I am Sankalp</h3>
                 <p class="MainText subText">Programmer and Developer</p>
                 <p class="MainText">If you want to talk about developing cool apps and web sites the reach me.</p>
@@ -26,14 +29,14 @@
     
                 </div>
             </div>
-            <div class="col-lg-6 m-md-auto m-sm-auto z-0">
+            <div class="col-lg-6 sm\:auto-cols-auto">
    <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_crm7f2hm.json" class="lottie"  background="transparent"  speed="1"  style="width: 600px; height: 600px;" loop autoplay></lottie-player>
             </div>
         </div>
       </section>
 
  <section id="MidView">
-          <div class=" MidViewDesign shadow-lg rounded-lg h-18 z-10">
+          <div class=" MidViewDesign shadow-lg rounded-lg h-18 z-10 animate__jello">
               <div class="row">
                   <div class="col-lg-6">
                     <h1 class="HeadingText">KNOW ME</h1>
