Added scrollmagic with the help of cdn

--- a/html/index.html
+++ b/html/index.html
@@ -30,6 +30,9 @@
     />
     <!-- Lottie file linked. -->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <!--Scroll magic linked-->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
   </head>
   <body>
     <canvas id="canvas"></canvas>
@@ -355,6 +358,7 @@
       src="https://kit.fontawesome.com/f4d4f77253.js"
       crossorigin="anonymous"
     ></script>
-    <script src="../janpaepke-ScrollMagic-f1cccba/scrollmagic/uncompressed/ScrollMagic.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
   </body>
 </html>
