ScrollMagic added and implemented.

--- a/html/index.html
+++ b/html/index.html
@@ -30,9 +30,9 @@
     />
     <!-- Lottie file linked. -->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <!--Scroll magic linked-->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  
+   
   </head>
   <body>
     <canvas id="canvas"></canvas>
@@ -94,9 +94,9 @@
           rounded-lg
           h-18
           z-10
-          animate__animated animate__bounceInLeft
+
         "
-        style="animation-duration: 4s"
+
       >
         <div class="row">
           <div class="col-lg-6">
@@ -352,13 +352,13 @@
         ></a>
       </div>
     </section>
-    <script src="../js/server.js"></script>
     <script src="../js/canvas.js"></script>
+    <script src="../js/scroll.js"></script>
     <script
       src="https://kit.fontawesome.com/f4d4f77253.js"
       crossorigin="anonymous"
     ></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="../cdnjs/ScrollMagic.min.js"></script>
   </body>
 </html>
