--- a/html/project.html
+++ b/html/project.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 <body>
@@ -86,9 +87,9 @@
          
     </section> -->
 
-    <section id="app">
-       <div class="row">
-           <div class="col-lg-6">
+    <section id="app" data-aos="fade-left" data-aos-duration="3000" data-aos-easing="linear">
+       <div class="row animate__animated animate__bounceInLeft">
+           <div class="col-lg-6 animate__animated animate__bounceInLeft">
                <div class="appText shadow-lg rounded-lg h-18 animate-pulse">
                    <h1 class="AppHeading">BEVERAGES</h1>
                    <p class="appSubtext">-Buillt using swift</p>
@@ -286,6 +287,11 @@
 
 <script src="https://kit.fontawesome.com/f4d4f77253.js" crossorigin="anonymous"></script>
 <script src="../js/canvas.js"></script>
+<script>
+    AOS.init();
+</script>
+<script src="../js/scroll.js"></script>
+
     
 </body>
 </html>
