New section added.

--- a/html/project.html
+++ b/html/project.html
@@ -87,9 +87,9 @@
          
     </section> -->
 
-    <section id="app" data-aos="fade-left" data-aos-duration="3000" data-aos-easing="linear">
-       <div class="row animate__animated animate__bounceInLeft">
-           <div class="col-lg-6 animate__animated animate__bounceInLeft">
+    <section id="app">
+       <div class="row">
+           <div class="col-lg-6">
                <div class="appText shadow-lg rounded-lg h-18 animate-pulse">
                    <h1 class="AppHeading">BEVERAGES</h1>
                    <p class="appSubtext">-Buillt using swift</p>
@@ -213,6 +213,32 @@
   </div>
  </div>
      
+ </section>
+
+ <section id="database">
+
+    <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_qp1q7mct.json"  background="transparent" speed="1.5" style="width: 220px; height: 220px;" loop autoplay></lottie-player>
+    <h1 class="J">DATABASE</h1>
+      <div class="row">
+          <div class="col-lg-6">
+            <div class="appText shadow-md rounded-lg h-18">
+                <h1 class="AppHeading">PORTFOLIO</h1>
+                <p class="appSubtext">-My Portfolio web design.</p>
+                <p class="appSubtext">-Buillt using html , css and javascript.</p>
+                <p class="appSubtext">-Includes tailwind , bootstrap , node.js and express.js as framework.</p>
+                <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
+          </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="appText shadow-md rounded-lg h-18">
+            <h1 class="AppHeading">PORTFOLIO</h1>
+            <p class="appSubtext">-My Portfolio web design.</p>
+            <p class="appSubtext">-Buillt using html , css and javascript.</p>
+            <p class="appSubtext">-Includes tailwind , bootstrap , node.js and express.js as framework.</p>
+            <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
+      </div>
+  </div>
+      </div>
  </section>
  
  <section id="other">
